--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ sysinfo.txt
 *.apk
 *.unitypackage
 *.log
+*.log
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
+Logs/shadercompiler-UnityShaderCompiler.exe1.log
+Logs/shadercompiler-UnityShaderCompiler.exe2.log
+Logs/shadercompiler-UnityShaderCompiler.exe3.log
